message RequestEnvelop {
  required int32 unknown1 = 1;
  optional int64 rpc_id = 3;
  repeated Requests requests = 4;
  optional Unknown6 unknown6 = 6;
  optional double latitude = 7;
  optional double longitude = 8;
  optional double altitude = 9;
  optional AuthInfo auth = 10;
  optional int64 unknown12 = 12;

  message Requests {
    required int32 type = 1;
    optional bytes message = 2;
  }

  message Unknown3 {
    required string unknown4 = 1;
  }

  message Unknown6 {
    required int32 unknown1 = 1;
    required Unknown2 unknown2 = 2;

    message Unknown2 {
      required bytes unknown1 = 1;
    }

  }
  message AuthInfo {
    required string provider = 1;
    required JWT token = 2;

    message JWT {
      required string contents = 1;
      required int32 unknown13  = 2;
    }
  }

  message MessageQuad {
    repeated bytes f1 = 1;
    required bytes f2 = 2;
    required double lat = 3;
    required double long = 4;
  }
}

message ResponseEnvelop {
  optional int32 unknown1 = 1;
  optional int64 unknown2 = 2;
  optional string api_url = 3;
  optional Unknown6 unknown6 = 6;
  optional Unknown7 unknown7 = 7;
  repeated bytes payload = 100;

  message Unknown6 {
    required int32 unknown1 = 1;
    required Unknown2 unknown2 = 2;

    message Unknown2 {
      required bytes unknown1 = 1;
    }

  }

  message Unknown7 {
    optional bytes unknown71 = 1;
    optional int64 unknown72 = 2;
    optional bytes unknown73 = 3;
  }

  message HeartbeatPayload {
    repeated ClientMapCell cells = 1;
  }

  message ClientMapCell {
    required uint64 S2CellId = 1;
    required int64 AsOfTimeMs = 2;
    repeated PokemonFortProto Fort = 3;
    repeated ClientSpawnPointProto SpawnPoint = 4;
    repeated WildPokemonProto WildPokemon = 5;
    //unknown DeletedObject = 6;
    optional bool IsTruncatedList = 7;
    repeated PokemonSummaryFortProto FortSummary = 8;
    repeated ClientSpawnPointProto DecimatedSpawnPoint = 9;
    repeated MapPokemonProto MapPokemon = 10;
    repeated NearbyPokemonProto NearbyPokemon = 11;
  }


  message WildPokemon {
    required string UniqueId = 1;
    required string PokemonId = 2;
    // int64 three = 3;
    // float four = 4;
    // int32 five = 5;
    // unknown six = 6;
    repeated NearbyPokemonProto pokemon = 11;
  }


  message MapPokemonProto {
    required string SpawnpointId = 1;
    required fixed64 EncounterId = 2;
    required int32 PokedexTypeId = 3;
    required int64 ExpirationTimeMs = 4;
    optional double Latitude = 5;
    optional double Longitude = 6;
  }

  message PokemonFortProto {
    required string FortId = 1;
    required int64 LastModifiedMs = 2;
    required double Latitude = 3;
    required double Longitude = 4;
    optional int32 Team = 5;
    optional int32 GuardPokemonId = 6;
    optional int32 GuardPokemonLevel = 7;
    required bool Enabled = 8;
    // ENUM.Holoholo.Rpc.FortType FortType = 9;
    optional int32 FortType = 9;
    optional int64 GymPoints = 10;
    optional bool IsInBattle = 11;
    //unknown ActiveFortModifier = 12;
    optional MapPokemonProto ActivePokemon = 13;
    optional int64 CooldownCompleteMs = 14;
    // ENUM.Holoholo.Rpc.Sponsor.Types.FortSponsor.Sponsor Sponsor = 15;
    optional int32 Sponsor = 15;
    // ENUM.Holoholo.Rpc.RenderingType.Types.FortRenderingType.RenderingType RenderingType = 16;
    optional int32 RenderingType = 16;
  }

  message PokemonSummaryFortProto {
    required string FortSummaryId = 1;
    required int64 LastModifiedMs = 2;
    required double Latitude = 3;
    required double Longitude = 4;
  }

  message ClientSpawnPointProto {
    required double Latitude = 2;
    required double Longitude = 3;
  }

  message WildPokemonProto {
    optional fixed64 EncounterId = 1;
    optional int64 LastModifiedMs = 2;
    optional double Latitude = 3;
    optional double Longitude = 4;
    optional string SpawnPointId = 5;
    optional Pokemon pokemon = 7;
    optional int32 TimeTillHiddenMs = 11;

    message Pokemon {
        optional uint64 Id = 1;
        optional int32 PokemonId = 2;
    }
  }

  message NearbyPokemonProto {
    optional int32 PokedexNumber = 1;
    optional float DistanceMeters = 2;
    optional fixed64 EncounterId = 3;
  }

  message ProfilePayload {
    repeated int32 unknown1 = 1;
    optional Profile profile = 2;
  }

  message Profile {
    required int64 creation_time = 1;
    optional string username = 2;
    optional int32 team = 5;
    optional bytes tutorial = 7;
    optional AvatarDetails avatar = 8;
    optional int32 poke_storage = 9;
    optional int32 item_storage = 10;
    optional DailyBonus daily_bonus = 11;
    optional bytes unknown12 = 12;
    optional bytes unknown13 = 13;
    repeated Currency currency = 14;

    message AvatarDetails {
      optional int32 unknown2 = 2;
      optional int32 unknown3 = 3;
      optional int32 unknown9 = 9;
      optional int32 unknown10 = 10;
    }

    message DailyBonus {
      optional int64 NextCollectTimestampMs = 1;
      optional int64 NextDefenderBonusCollectTimestampMs = 2;
    }

    message Currency {
      required string type = 1;
      optional int32 amount = 2;
    }
  }
}
